tests/cli/snapshots/cli__clean__clean_apply_removes_from_all_locales.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
./messages/en.json:
  - Common.unused (line 4): ("Unused")  [unused]

./messages/zh.json:
  - Common.unused (line 4): ("未使用")  [unused]

Deleted 2 unused key(s) and 0 orphan key(s) from 2 file(s).

----- stderr -----
