tests/cli/snapshots/cli__clean__clean_apply_removes_keys.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
./messages/en.json:
  - Common.unused (line 4): ("Unused Key")  [unused]

Deleted 1 unused key(s) and 0 orphan key(s) from 1 file(s).

----- stderr -----
