tests/cli/snapshots/cli__clean__clean_apply_removes_unused_keys_inside_arrays.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
    - "--apply"
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Deleted 4 key(s) in 1 file(s) (processed 4 key(s)).
  - unused: 4 key(s) (from 4 issue(s))

----- stderr -----
