tests/cli/snapshots/cli__clean__clean_deeply_nested_keys.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./messages/en.json:6
     |
   6 | "App.Settings.Account.unused": "Unused" [unused]

Would delete 1 unused key(s) and 0 orphan key(s) from 1 file(s).
Run with --apply to delete these keys.

----- stderr -----
