tests/cli/snapshots/cli__clean__clean_messages_dir_not_found.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: Messages directory './nonexistent' does not exist.
Hint: Check your .glotrc.json 'messagesDir' setting.
