tests/cli/snapshots/cli__clean__clean_multiple_namespaces_mixed.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
  --> ./messages/en.json:4
     |
   4 | "Auth.logout": "Logout" [unused]

  --> ./messages/en.json:8
     |
   8 | "Common.cancel": "Cancel" [unused]

  --> ./messages/en.json:11
     |
  11 | "Unused.key": "Value" [unused]

Would delete 3 unused key(s) and 0 orphan key(s) from 1 file(s).
Run with --apply to delete these keys.

----- stderr -----
