tests/cli/snapshots/cli__clean__clean_no_keys_to_clean.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ No keys to clean.

----- stderr -----
