tests/cli/snapshots/cli__clean__clean_orphan_apply.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
    - "--rules"
    - orphan
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Deleted 1 key(s) in 1 file(s) (processed 1 key(s)).
  - orphan: 1 key(s) (from 1 issue(s))

----- stderr -----
